<resources>
    <string name="app_name">OPSC7311 POE</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="createD">Create a Diagram</string>
    <string name="design">Redesign Home Page</string>
    <string name="progress">View your progress</string>
    <string name="CurrentTask">Current Tasks:</string>
    <string name="seeAll">See All></string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="weeklyS">Weekly summary</string>
    <string name="chooseW">Choose a Week:</string>
    <string name="choose">Choose your graph:</string>
    <string name="add">Add</string>
    <string name="pie">Pie Chart</string>
    <string name="bar">Bar Graph</string>
    <string name="generate">Generate Summary</string>
    <string name="signup">Sign Up</string>
    <string name="fullName">Full Name</string>
    <string name="sign_in_to_lifetime">Sign in to LifeTime</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="username">Username</string>
    <string name="reset_password">Reset password</string>
    <string name="no_account">No account</string>
    <string name="create_one">Create one</string>
    <string name="current_task">Current Task</string>
    <string name="diagram">Diagram</string>
    <string name="tasks">Tasks</string>
    <string name="all_taps">All Taps</string>
    <string name="task">Task</string>
    <string name="name">Name</string>
    <string name="name_">Name</string>
    <string name="icon">Icon</string>
    <string name="color">Colour</string>
    <string name="task_duration">Task Duration</string>
    <string name="count_down">Countdown</string>
    <string name="description">Description</string>
    <string name="task_description">Task Description</string>
    <string name="note">Note</string>
    <string name="calendar_">Calendar</string>
    <string name="customP">Customize and Personalize</string>
    <string name="editUser">Edit Username:</string>
    <string name="seePass">See Password</string>
    <string name="profilePho">Upload a Profile Photo</string>
    <string name="uploadpic">Upload New</string>
    <string name="save2">Save</string>
    <string name="Email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="category">Category</string>
    <string name="target_hours">Target Hours</string>
    <string name="time_dash">-</string>
    <string name="add_event">Add Event</string>
    <string name="curent_day">%1$s</string>
    <string name="colourpreview">See Preview of selected Colour</string>
    <string name="back">←</string>
    <string name="forward">→</string>
    <string name="housecleaning">housecleaning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar2">Calendar2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_time">Enter time</string>
    <string name="select_date">Select date</string>
    <string name="enter_hours_spent">Enter hours for task</string>
    <string name="task_select">Select Task</string>
    <string name="cat_select">Select Category</string>
    <string name="select">Select</string>
    <string name="select_end_date">Select End Date</string>
    <string name="create_task">Create Task</string>
    <string name="create_category">Create Category</string>
    <string name="create_entry">Create Timesheet Entry</string>
    <string name="view_tasks">View Tasks</string>
    <string name="view_timesheet">View Timesheet Entries</string>
    <string name="password">Password</string>
    <string name="cat_view">View Total Hours For your Categories</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="Select">Select</string>
    <string name="SelectPeriod">Select a time period</string>
    <string name="yourHugeText">Output Will be displayed here:</string>
    <string name="homeWelcomeBack">Welcome back </string>
    <string name="profilePrompt">\'s Profile</string>


    <!-- Monthly Summary Page Strings-->
    <string name="top_category">Top Category: </string>
    <string name="total_hours_recorded">Total Hours Recorded: </string>
    <string name="ave_hours_per_day">Average Hours Recorded Per Day: </string>
    <string name="most_productive_day">Most Productive Day: </string>
    <string name="busiest_week">Busiest Week: </string>
    <string name="most_time_consuming_task">Most Time Consuming Task: </string>
    <string name="timer_fragment">Timer Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="calendar_fragment">Calendar Fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="choose_an_icon">Choose an Icon</string>
    <string name="new_event">New Event</string>
    <string name="minimum_hours_goal">Minimum Hours Goal:</string>
    <string name="maximum_hours_goal">Maximum Hours Goal:</string>
    <string name="average_hours_per_day">Average Hours per Day:</string>

</resources>