<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyblue"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/img_whiteBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="500dp"

        android:scaleType="centerCrop"
        android:src="@drawable/arc_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/empyViews"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_whiteBackground"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvuserProfile"
        android:layout_width="281dp"
        android:layout_height="53dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/profilebtn"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tvCustomiseProfile"
        android:layout_width="225dp"
        android:layout_height="30dp"

        android:fontFamily="sans-serif-medium"
        android:text="@string/customP"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/fullname"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="236dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="135dp"
        android:layout_height="23dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="305dp" />

    <TextView
        android:id="@+id/tvEditusername"
        android:layout_width="137dp"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/editUser"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="370dp" />

    <TextView
        android:id="@+id/tvSeePassword"
        android:layout_width="146dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/seePass"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="438dp" />

    <TextView
        android:id="@+id/tvProfilePhoto"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profilePho"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="493dp" />

    <TextView
        android:id="@+id/tvFullNameInput"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:text=""
        android:background="@drawable/bordertwo"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="236dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:text=""
        android:background="@drawable/bordertwo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:text=""
        android:background="@drawable/bordertwo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:text=""
        android:background="@drawable/bordertwo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="423dp" />

    <ImageView
        android:id="@+id/img_photoUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/uploadphoto"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="493dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/uploadpic"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="573dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="151dp"
        android:layout_height="55dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/black"
        android:text="@string/save2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="611dp" />


</androidx.constraintlayout.widget.ConstraintLayout>