<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyblue"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".WeeklySummary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="500dp"

        android:scaleType="centerCrop"
        android:src="@drawable/arc_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/chooseWeek"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="361dp"
        android:layout_height="40dp"

        android:layout_marginBottom="550dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-medium"
        android:scaleType="center"
        android:src="@drawable/arc_1"
        android:text="@string/weeklyS"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvChooseAWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chooseW"
        tools:ignore="MissingConstraints"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="307dp" />

    <TextView
        android:id="@+id/tvGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/choose"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="368dp" />

    <ImageView
        android:id="@+id/img_chooseDate"
        android:layout_width="40dp"
        android:layout_height="43dp"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="298dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_piechart"
        android:layout_width="120dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/piechart"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="392dp" />

    <ImageView
        android:id="@+id/img_bar"
        android:layout_width="120dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/bar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="392dp" />

    <TextView
        android:id="@+id/tvPie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pie"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="485dp" />

    <TextView
        android:id="@+id/tvBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/bar"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="485dp" />

    <TextView
        android:id="@+id/tvgenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/blue"
        android:text="@string/generate"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="518dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="418dp"
            android:layout_height="94dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="95dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bottom_btn3" />

                <TextView
                    android:id="@+id/tv_Profile"
                    android:layout_width="83dp"
                    android:layout_height="21dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/profile" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="90dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/tv_Home"
                    android:layout_width="83dp"
                    android:layout_height="21dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/home" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="90dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_calendar_month_24" />

                <TextView
                    android:id="@+id/tv_calendar"
                    android:layout_width="83dp"
                    android:layout_height="21dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.473"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/calendar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="91dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_circle_notifications_24" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="83dp"
                    android:layout_height="21dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/timer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
