<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyblue"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvBlackBox"
        android:layout_width="296dp"
        android:layout_height="87dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/black"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="247dp"
        android:layout_height="27dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </SearchView>

    <Button
        android:id="@+id/btn_CurrentTasks"
        android:layout_width="106dp"
        android:layout_height="55dp"


        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundstyle"

        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/CurrentTask"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_See_All"
        android:layout_width="134dp"
        android:layout_height="66dp"

        android:background="@drawable/roundstyle"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/seeAll"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_CurrentTasks"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="169dp"


        android:layout_marginTop="88dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#FFFFFF"
        android:text="@string/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navBar"
        android:layout_width="415dp"

        android:layout_height="173dp"
        android:layout_marginTop="740dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_Profile"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_Home"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/profile" />

        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toEndOf="@+id/tv_Home"
            tools:text="@string/calendar" />

        <TextView
            android:id="@+id/tv_Home"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_calendar"
            app:layout_constraintStart_toEndOf="@+id/tv_Profile"
            tools:text="@string/home" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_calendar"
            tools:text="@string/timer" />

        <ImageButton
            android:id="@+id/ib_Profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/tv_Profile"
            app:layout_constraintEnd_toStartOf="@+id/ib_Home"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/navprofile"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/ib_Home"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/tv_Home"
            app:layout_constraintEnd_toStartOf="@+id/ib_Calendar"
            app:layout_constraintStart_toEndOf="@+id/ib_Profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/house"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/ib_Calendar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="#FFFFFF"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/tv_calendar"
            app:layout_constraintEnd_toStartOf="@+id/ib_Timer"
            app:layout_constraintStart_toEndOf="@+id/ib_Home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64"
            app:srcCompat="@drawable/calendar"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/ib_Timer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/tv_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_Calendar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/timer"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>